@@ -1,3 +1,30 @@
+//package edu.miu.cs.cs489appsd.hotel.security;
+//
+//import org.springframework.context.annotation.Bean;
+//import org.springframework.context.annotation.Configuration;
+//import org.springframework.web.cors.CorsConfiguration;
+//import org.springframework.web.cors.reactive.CorsConfigurationSource;
+//import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+//
+//import java.util.Arrays;
+//import java.util.List;
+//
+//@Configuration
+//public class CorsConfig {
+//
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration corsConfiguration = new CorsConfiguration();
+//
+//        corsConfiguration.setAllowedOrigins(List.of("*")); // Allow all origins (adjust in production)
+//        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+//        corsConfiguration.setAllowedHeaders(List.of("*")); // Allow all headers
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", corsConfiguration); // Apply to all paths
+//        return source;
+//    }
+//}
 package edu.miu.cs.cs489appsd.hotel.security;
 
 import org.springframework.context.annotation.Bean;
@@ -16,12 +43,23 @@ public class CorsConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
 
-        corsConfiguration.setAllowedOrigins(List.of("*")); // Allow all origins (adjust in production)
-        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-        corsConfiguration.setAllowedHeaders(List.of("*")); // Allow all headers
+        // Allow all origins — change to "http://localhost:3000" in production
+        corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000"));
 
+        // Allowed HTTP methods
+        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        // Allow all headers
+        corsConfiguration.setAllowedHeaders(List.of("*"));
+
+        // Allow credentials if needed
+        corsConfiguration.setAllowCredentials(true);
+
+        // Apply CORS config to all paths
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", corsConfiguration); // Apply to all paths
+        source.registerCorsConfiguration("/**", corsConfiguration);
+
         return source;
     }
 }
+
